--- a/BinaryPacketServer/packages.config
+++ b/BinaryPacketServer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="SuperSocket" version="1.6" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="SuperSocket" version="1.6.6.1" targetFramework="net45" />
+  <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net45" />
 </packages>
